--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.18.0",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-object-rest-spread": "^6.19.0",
     "babel-plugin-transform-runtime": "^6.15.0",
@@ -45,6 +46,12 @@
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-15.4": "^1.0.6",
     "es5-shim": "^4.5.9",
+    "eslint": "^6.2.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^0.8.5",
     "fontgen-loader": "^0.2.1",
     "html-webpack-plugin": "^2.24.1",
