--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ typings/
 
 # Optional npm cache directory
 .npm
+*-lock.json
 
 # Optional eslint cache
 .eslintcache
@@ -59,3 +60,6 @@ typings/
 
 # next.js build output
 .next
+
+# build
+frontend-dist/
