--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "plugins": [
         "react"
     ],
+    "parser": "babel-eslint",
     "rules": {
         "react/prefer-stateless-function": [0,],
         "max-len": [0],
