--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-core": "^6.18.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.19.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
