--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
     "env": {
         "browser": true,
-        "es6": true
+        "es6": true,
+        "jest": true,
+        "mocha": true
     },
     "extends": [
         "airbnb"
